--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <tbody>
             <tr>
                 <td>2015-Present</td>
-                <td>USG reporter at private clinic</td>
+                <td>USG reporter at SDC</td>
             </tr>
             <tr>
                 <td>2017-Present</td>
-                <td>USG reporter at INMAS, Bogura</td>
+                <td>Laboratory Attendant at Bangladesh Atomic Energy Commission</td>
             </tr>
         </tbody>
     </table>
