--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <td><img src="pictures/myPic-modified.png" alt="Omar's profile picture"></td>
             <td><h1>Md. Omar Faruk</h1>
     <p><em>Student of the world best <strong><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?couponCode=KEEPLEARNING">Web Devlopment course</a></strong>.</em></p>
-    <p>I am a web developer student. I am very 🥱 but I want to be a better web developer in the world.</p></td>
+    <p>I am a web developer student. I am very 🥱, but I want to be the best web developer in the world.</p></td>
         </tr>
     </table>   
     <hr>
@@ -31,8 +31,12 @@
                 <td>USG reporter at SDC</td>
             </tr>
             <tr>
-                <td>2017-Present</td>
-                <td>Laboratory Attendant at Bangladesh Atomic Energy Commission</td>
+                <td>2017-2020</td>
+                <td>DB at INMAS</td>
+            </tr>
+            <tr>
+                <td>2020-Present</td>
+                <td>LA at BAEC</td>
             </tr>
         </tbody>
     </table>
