--- a/index.html
+++ b/index.html
@@ -1,63 +1,82 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="UTF-8" />
     <title>Omar's Personal Site</title>
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <table cellspacing="20">
-        <tr>
-            <td><img src="pictures/myPic-modified.png" alt="Omar's profile picture"></td>
-            <td><h1>Md. Omar Faruk</h1>
-    <p><em>Student of the world best <strong><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?couponCode=KEEPLEARNING">Web Devlopment course</a></strong>.</em></p>
-    <p>I am a web developer student. I am very 🥱, but I want to be the best web developer in the world.</p></td>
-        </tr>
-    </table>   
-    <hr>
+      <tr>
+        <td>
+          <img src="pictures/myPic-modified.png" alt="Omar's profile picture" />
+        </td>
+        <td>
+          <h1>Md. Omar Faruk</h1>
+          <p>
+            <em
+              >Student of the world best
+              <strong
+                ><a
+                  href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?couponCode=KEEPLEARNING"
+                  >Web Devlopment course</a
+                ></strong
+              >.</em
+            >
+          </p>
+          <p>
+            I am a web developer student. I am very 🥱, but I want to be the
+            best web developer in the world.
+          </p>
+        </td>
+      </tr>
+    </table>
+    <hr />
     <h3>Books and learning</h3>
     <ul>
-        <li>The Complete iOS App Development Bootcamp</li>
-        <li>The Complete Web Development Bootcamp</li>
+      <li>The Complete iOS App Development Bootcamp</li>
+      <li>The Complete Web Development Bootcamp</li>
     </ul>
-    <hr>
+    <hr />
     <h3>Work Experience</h3>
     <table cellspacing="10">
-        <thead>
-            <th>Dates</th>
-            <th>Work</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2015-Present</td>
-                <td>USG reporter at SDC</td>
-            </tr>
-            <tr>
-                <td>2017-2020</td>
-                <td>DB at INMAS</td>
-            </tr>
-            <tr>
-                <td>2020-Present</td>
-                <td>LA at BAEC</td>
-            </tr>
-        </tbody>
+      <thead>
+        <th>Dates</th>
+        <th>Work</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2015-Present</td>
+          <td>USG reporter at SDC</td>
+        </tr>
+        <tr>
+          <td>2017-2020</td>
+          <td>DB at INMAS</td>
+        </tr>
+        <tr>
+          <td>2020-Present</td>
+          <td>LA at BAEC</td>
+        </tr>
+      </tbody>
     </table>
-    <hr>
+    <hr />
     <h3>Skills</h3>
     <table cellspacing="10">
-        <tr>
-            <td>iOS Development</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Web Development</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Photography</td>
-            <td>⭐⭐</td>
-        </tr>
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐⭐</td>
+      </tr>
     </table>
-    <hr>
+    <hr />
     <a href="hobbies.html">My Hobbies</a>
     <a href="contact-me.html">Contact Me</a>
-</body>
+  </body>
 </html>
