--- a/hobbies.html
+++ b/hobbies.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="UTF-8" />
     <title>My Hobbies</title>
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <h3>Hobbies</h3>
     <ol>
-        <li><a href="https://medium.com/@ohansemmanuel/how-to-become-the-best-programmer-in-the-world-ef9f584c81fa">Best Progammer ever</a></li>
-        <li><a href="https://www.innerpeacefellowship.org/why-be-good/?gad_source=1&gad_campaignid=20716985935&gbraid=0AAAAADjrwVV_e7cmltVyBzjV7KTJE7ZR3&gclid=Cj0KCQjwgIXCBhDBARIsAELC9ZiwsHmglsqT_1t7aGaUKqpzUzFfsg-78ZBg0vn0ODxBNMAZ6QXyVIQaAsdFEALw_wcB">Good Person forever</a></li>
-        <li><a href="https://www.healthline.com/health/how-to-maintain-a-healthy-lifestyle#limit-alcohol">Healthy Life</a></li>
+      <li>
+        <a
+          href="https://medium.com/@ohansemmanuel/how-to-become-the-best-programmer-in-the-world-ef9f584c81fa"
+          >Best Progammer ever</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.innerpeacefellowship.org/why-be-good/?gad_source=1&gad_campaignid=20716985935&gbraid=0AAAAADjrwVV_e7cmltVyBzjV7KTJE7ZR3&gclid=Cj0KCQjwgIXCBhDBARIsAELC9ZiwsHmglsqT_1t7aGaUKqpzUzFfsg-78ZBg0vn0ODxBNMAZ6QXyVIQaAsdFEALw_wcB"
+          >Good Person forever</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://www.healthline.com/health/how-to-maintain-a-healthy-lifestyle#limit-alcohol"
+          >Healthy Life</a
+        >
+      </li>
     </ol>
-</body>
+  </body>
 </html>
