--- a/contact-me.html
+++ b/contact-me.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="UTF-8" />
     <title>My Contact Info</title>
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <h3>My Address</h3>
     <p>Bogura, Rajshahi, Bangladesh</p>
     <p>omarfaruk090599@gmail.com</p>
-    <hr>
+    <hr />
     <form action="mailto:omarfaruk090599@gmail.com" method="post">
-        <label>Your Name:</label>
-        <input type="text" name="yourName" value=""><br>
-        <label>Your Email:</label>
-        <input type="email" name="yourEmail" value=""><br>
-        <label>Your Message:</label><br>
-        <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
-        <input type="submit" name="">
+      <label>Your Name:</label>
+      <input type="text" name="yourName" value="" /><br />
+      <label>Your Email:</label>
+      <input type="email" name="yourEmail" value="" /><br />
+      <label>Your Message:</label><br />
+      <textarea name="yourMessage" rows="10" cols="30"></textarea><br />
+      <input type="submit" name="" />
     </form>
-</body>
+  </body>
 </html>
