--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Omar's Personal Site</title>
+    <link
+      rel="shortcut icon"
+      href="pictures/logo-myself.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -80,3 +85,4 @@
     <a href="contact-me.html">Contact Me</a>
   </body>
 </html>
+
